language update  refs #3430

--- a/lang/cs.json
+++ b/lang/cs.json
@@ -66,6 +66,8 @@
         "ColumnNbActionsDocumentation": "Počet akcí Vašich návštěvníků. Akcí se rozumí zobrazení stránky, stažení a kliknutí na externí odkazy.",
         "ColumnNbUniqVisitors": "Jedineční návštěvníci",
         "ColumnNbUniqVisitorsDocumentation": "Počet neduplicitních návštěvníků, kteří navštívili vaše stránky. Každý návštěvník je počítán pouze jednou, ikdyž třeba přišel několikrát za den.",
+        "ColumnNbUsers": "Uživatelé",
+        "ColumnNbUsersDocumentation": "Počet uživatelů přihlášených na vašich stránkách. Je to počet unikátních aktivních uživatelů, kteří mají nastavené ID pomocí sledovací funkce 'setUserId'.",
         "ColumnNbVisits": "Návštěv",
         "ColumnNbVisitsDocumentation": "Pokud návštěvník přijde na vaše stránky poprvé nebo po třiceti minutách, je tato návštěva započítána jako nová.",
         "ColumnPageBounceRateDocumentation": "Procento návštěv, které začaly touto stránkou a ihned ji opustili.",
@@ -106,7 +108,7 @@
         "DayFr": "pá",
         "DayMo": "po",
         "DaySa": "so",
-        "DaysHours": "%1$s dni %2$s hodin",
+        "DaysHours": "%1$s dní %2$s hodin",
         "DaysSinceFirstVisit": "Dnů od první návštěvy",
         "DaysSinceLastEcommerceOrder": "Dnů od poslední elektronické objednávky",
         "DaysSinceLastVisit": "Dnů od poslední návštěvy",
@@ -162,13 +164,13 @@
         "ExceptionLanguageFileNotFound": "Jazykový soubor '%s' nenalezen",
         "ExceptionMethodNotFound": "Metoda '%s' neexistuje nebo není dostupná v modulu '%s'.",
         "ExceptionMissingFile": "Chybějící soubor: %s",
-        "ExceptionNonceMismatch": "Nemůžu ověřit bezpečnostní token tohoto formuláře",
+        "ExceptionNonceMismatch": "Nebylo možné ověřit bezpečnostní token tohoto formuláře.",
         "ExceptionPrivilege": "Nemůžete přistupovat k tomuto zdroji, protože vyžaduje oprávnění %s.",
         "ExceptionPrivilegeAccessWebsite": "Nemůžete přistupovat k tomuto zdroji, protože vyžaduje přístup %s pro stránku s ID = %d.",
         "ExceptionPrivilegeAtLeastOneWebsite": "Nemůžete přistupovat k tomuto zdroji, protože vyžaduje oprávnění %s alespoň pro jeden web",
         "ExceptionReportNotEnabled": "Požadované hlášení není povoleno. To obvykle znamená, že zásuvný modul, který ho poskytuje je zakázán, nebo že nemáte dostatečná oprávnění.",
         "ExceptionReportNotFound": "Požadované hlášení neexistuje.",
-        "ExceptionUnableToStartSession": "Otevřeno k start session",
+        "ExceptionUnableToStartSession": "Nepodařilo se zahájit sezení.",
         "ExceptionUndeletableFile": "Nelze vymazat soubor %s",
         "ExceptionUnreadableFileDisabledMethod": "Konfigurační soubor {%s} je nečitelný. Host může být zakázán %s.",
         "ExceptionWidgetNotFound": "Požadovaný widget neexistuje.",
@@ -177,14 +179,14 @@
         "ExportAsImage": "Exportovat obrázek",
         "ExportThisReport": "Exportovat data v ostatních formátech",
         "Faq": "FAQ",
-        "FileIntegrityWarningExplanation": "Test integrity selhal a nahlásil nějaké chyby. To je díky částečně nebo špatně nahraným souborům Piwiku. Měli byste znova nahrát všechny soubory Piwiku v módu BINARY.",
+        "FileIntegrityWarningExplanation": "Test integrity selhal a nahlásil nějaké chyby. To je kvůli částečně nebo špatně nahraným souborům Piwiku. Měli byste znovu nahrát všechny soubory Piwiku v módu BINARY.",
         "First": "První",
         "Flatten": "Zploštit",
         "ForExampleShort": "např.",
         "Forums": "Fóra",
         "FromReferrer": "z",
-        "GeneralInformation": "Hlavní informace",
-        "GeneralSettings": "Hlavní nastavení",
+        "GeneralInformation": "Obecné informace",
+        "GeneralSettings": "Obecná nastavení",
         "GetStarted": "Začít",
         "GiveUsYourFeedback": "Dejte nám zpětnou vazbu!",
         "Goal": "Cíl",
@@ -204,7 +206,7 @@
         "IP": "IP",
         "JsTrackingTag": "JavaScriptový zaznamenávací tag",
         "Language": "Jazyk",
-        "LastDays": "Posledních %s dní (včetně dnes)",
+        "LastDays": "Posledních %s dní (včetně dneška)",
         "LastDaysShort": "Posledních %s dní",
         "LayoutDirection": "ltr",
         "Live": "Živě",
@@ -233,9 +235,9 @@
         "LongMonth_7": "Červenec",
         "LongMonth_8": "Srpen",
         "LongMonth_9": "Září",
-        "MainMetrics": "Hlavní metriky",
+        "MainMetrics": "Hlavní měření",
         "Matches": "Shody",
-        "MediumToHighTrafficItIsRecommendedTo": "Pro weby se středním, nebo velkým provozem doporučujeme zpracovat dnešní hlášení každou půlhodinu (%s vteřin), nebo každou hodinu (%s vteřin)",
+        "MediumToHighTrafficItIsRecommendedTo": "Pro weby se středním nebo velkým provozem doporučujeme zpracovat dnešní hlášení každou půlhodinu (%s vteřin), nebo každou hodinu (%s vteřin)",
         "Metadata": "Meta data",
         "Metric": "Měření",
         "Metrics": "Měření",
@@ -255,7 +257,7 @@
         "NbSearches": "Počet interních vyhledávání",
         "NDays": "%s dní",
         "Never": "Nikdy",
-        "NewReportsWillBeProcessedByCron": "Pokud není archivování spouštěno web prohlížečem budou nová hlášení zpracovávaná cronem",
+        "NewReportsWillBeProcessedByCron": "Pokud není archivování spouštěno web prohlížečem, budou nová hlášení zpracovávána cronem",
         "NewUpdatePiwikX": "Nová aktualizace: Piwik %s",
         "NewVisitor": "Nový návštěvník",
         "NewVisits": "Nové návštěvy",
@@ -263,14 +265,15 @@
         "NMinutes": "%s minut",
         "No": "Ne",
         "NoDataForGraph": "Pro tento graf nejsou k dispozici žádná data",
-        "NoDataForTagCloud": "Pro tento oblak tagů nejsou k dispozici žádná data.",
+        "NoDataForTagCloud": "Pro tento tag cloud nejsou k dispozici žádná data.",
         "NotDefined": "%s není definováno",
         "Note": "Poznámka",
-        "NotInstalled": "Nenaistalováno",
+        "NotInstalled": "Nenainstalováno",
         "NotRecommended": "(nedoporučuje se)",
         "NotValid": "%s není platné",
         "NSeconds": "%s sekund",
         "NumberOfVisits": "Počet návštěv",
+        "NUsers": "%s uživatelů",
         "NVisits": "%s návštěv",
         "Ok": "OK",
         "OneAction": "1 akce",
@@ -353,7 +356,7 @@
         "SeeTheOfficialDocumentationForMoreInformation": "Pro více informací navštivte %soficiální dokumentaci%s.",
         "Segment": "Část",
         "SelectYesIfYouWantToSendEmailsViaServer": "Zvolte \"Ano\" pokud chcete e-mail posílat pomocí uvedeného serveru místo lokální funkce PHP mail",
-        "Settings": "Vlastnostni",
+        "Settings": "Nastavení",
         "Shipping": "Doprava",
         "ShortDay_1": "Po",
         "ShortDay_2": "Út",
@@ -375,7 +378,7 @@
         "ShortMonth_8": "Srp",
         "ShortMonth_9": "Zář",
         "Show": "zobrazit",
-        "SingleWebsitesDashboard": "Nástěnka pro jedny stránek",
+        "SingleWebsitesDashboard": "Nástěnka pro jedny stránky",
         "SmallTrafficYouCanLeaveDefault": "Pro weby s malým provozem můžete ponechat výchozích %s sekund a uvidíte všechna hlášení v reálném čase",
         "SmtpEncryption": "SMTP šifrování",
         "SmtpPassword": "Heslo SMTP",
@@ -404,6 +407,7 @@
         "Unknown": "Neznámý",
         "Upload": "Nahrát",
         "UsePlusMinusIconsDocumentation": "Použijte ikonu plus a mínus vlevo od navigace.",
+        "UserId": "ID uživatele",
         "Username": "Uživatelské jméno",
         "UseSMTPServerForEmail": "Pro e-mail použít SMTP server",
         "Value": "Hodnota",
