--- a/lang/da.json
+++ b/lang/da.json
@@ -66,6 +66,8 @@
         "ColumnNbActionsDocumentation": "Antal handlinger, der udføres af besøgende. Handlinger kan være sidevisninger, filhentninger eller udgående links.",
         "ColumnNbUniqVisitors": "Unikke besøgende",
         "ColumnNbUniqVisitorsDocumentation": "Antal unikke besøg på hjemmesiden. Hver besøgende tælles kun én gang, selvom hjemmesiden besøges flere gange om dagen.",
+        "ColumnNbUsers": "Brugere",
+        "ColumnNbUsersDocumentation": "Antallet af brugere logget på din hjemmeside. Det er antallet af unikke aktive brugere, der har et bruger-ID sat (via sporingskode funktionen 'setUserId').",
         "ColumnNbVisits": "Besøg",
         "ColumnNbVisitsDocumentation": "Hvis en besøgende kommer til hjemmesiden for første gang, eller hvis det sidste besøg er mere end 30 minutter efter første besøg, vil det blive registreret som et nyt besøg.",
         "ColumnPageBounceRateDocumentation": "Procentdel af besøg, der startede på denne side og forlod hjemmesiden med det samme.",
@@ -405,6 +407,7 @@
         "Unknown": "Ukendt",
         "Upload": "Overfør",
         "UsePlusMinusIconsDocumentation": "Brug plus og minus ikonerne til venstre til at navigere.",
+        "UserId": "Bruger ID",
         "Username": "Brugernavn",
         "UseSMTPServerForEmail": "Brug SMTP server til e-mail",
         "Value": "Værdi",
