--- a/lang/pl.json
+++ b/lang/pl.json
@@ -20,6 +20,7 @@
         "AverageQuantity": "Średnia ilość",
         "BackToPiwik": "Powrót do Piwik",
         "Broken": "Uszkodzony",
+        "BrokenDownReportDocumentation": "Dzieli się on na różne raporty, które są prezentowane w Wykresy na dolnej stronie. Możesz powiększyć wykresy klikając na raporcie, który chcesz zobaczyć.",
         "Cancel": "Anuluj",
         "ChangePassword": "Zmień hasło",
         "ChooseDate": "Zakres dat",
@@ -28,6 +29,7 @@
         "ChooseWebsite": "Wybierz stronę",
         "Clear": "Wyczyść",
         "ClickHere": "Kliknij tutaj, aby uzyskać więcej informacji.",
+        "ClickToChangePeriod": "Kilknij jeszcze raz i zmień okres.",
         "Close": "Zamknij",
         "ColumnActionsPerVisit": "Ilość akcji przypadających na wizytę",
         "ColumnActionsPerVisitDocumentation": "Średnia liczba akcji (odsłon, pobrań plików lub kliknięć w linki wychodzące) na wizytę.",
@@ -59,6 +61,7 @@
         "ColumnNbUniqVisitors": "Liczba niepowtarzających się użytkowników",
         "ColumnNbUniqVisitorsDocumentation": "Liczba nie zduplikowanych użytkowników odwiedzających twoją witrynę. Każdy użytkownik jest liczony tylko raz, nawet jeśli odwiedza stronę kilka razy dziennie.",
         "ColumnNbUsers": "Użytkownicy",
+        "ColumnNbUsersDocumentation": "Liczba użytkowników zalogowanych na twoja stronę. To jest liczba unikalnych, aktywnych użytkowników, którzy posiadają ustawiony User ID",
         "ColumnNbVisits": "użytkownicy",
         "ColumnNbVisitsDocumentation": "Jeśli odwiedzający wchodzi na stronę po raz pierwszy lub gdy odwiedza stronę po 30 minut, to zostanie zapisany jako nowa wizyta.",
         "ColumnPageviews": "Liczba odsłon",
@@ -72,6 +75,7 @@
         "ColumnUniquePageviews": "Liczba odsłon niepowtarzających się",
         "ColumnUniquePageviewsDocumentation": "Liczba wizyt uwzględniających tą stronę. Jeżeli strona odwiedzana była kilka razy podczas jednej wizyty, zostanie policzona tylko raz.",
         "ColumnValuePerVisit": "Wartość odwiedzin",
+        "ColumnViewedAfterSearch": "Kliknięć w wyniki wyszukiwania",
         "ColumnVisitDuration": "Czas pobytu (w sekundach)",
         "ColumnVisitsWithConversions": "Wizyty z przeniesieniami",
         "ConfigFileIsNotWritable": "Plik konfiguracyjny Piwik %s nie ma ustawionych praw do zapisu, zmiany poczynione nie mogły więc zostać zapisane. %s Zmień przez chmod uprawnienia do zapisu pliku konfiguracyjnego.",
@@ -85,6 +89,7 @@
         "DailyReports": "Raporty dzienne",
         "DailySum": "Kwota dzienna",
         "DashboardForASpecificWebsite": "Tablica analiz dla wybranej strony",
+        "DataForThisGraphHasBeenPurged": "Dane dla tego wykresu są starsze niż %s miesiące i zostały wyczyszczone.",
         "Date": "Data",
         "DateRange": "Zakres dat:",
         "DateRangeFrom": "od",
@@ -117,7 +122,9 @@
         "Done": "Wykonano",
         "Download": "Pobierz",
         "DownloadFail_FileExists": "Plik %s istnieje!",
+        "DownloadFail_FileExistsContinue": "Próbuję kontynuować pobieranie dla %s ale w pełni pobrany plik już istnieje!",
         "DownloadFullVersion": "%1$sPobierz%2$s wersję pełną! Zobacz %3$s",
+        "DownloadPleaseRemoveExisting": "Jeśli chcesz, żeby został zastąpiony, proszę usunąć istniejący plik.",
         "Downloads": "Pobrania",
         "EcommerceOrders": "Zamówienia e-commerce",
         "Edit": "Edycja",
@@ -146,9 +153,12 @@
         "ExceptionPrivilege": "Nie posiadasz dostępu do tych zasobów, ponieważ one wymagają poziomu uprawnień określonych jako %s.",
         "ExceptionPrivilegeAccessWebsite": "Nie posiadasz dostępu do tych zasobów, ponieważ one wymagają uprawnień jako %s dla strony o id = %d.",
         "ExceptionPrivilegeAtLeastOneWebsite": "Nie posiadasz dostępu do tych zasobów, ponieważ one wymagają uprawnień jako %s w dostępie do przynajmniej jednej strony internetowej.",
+        "ExceptionReportNotEnabled": "Żądany raport nie jest włączony. Zazwyczaj oznacza to, że wtyczka, która określa raport jest nieaktywowana albo nie masz wystarczających uprawnień do dostępu do raportu.",
+        "ExceptionReportNotFound": "Raport nie istnieje.",
         "ExceptionUnableToStartSession": "Nie można uruchomić sesji.",
         "ExceptionUndeletableFile": "Nie można skasować %s",
         "ExceptionUnreadableFileDisabledMethod": "Plik konfiguracyjny {%s} nie ma praw do odczytu. Twój hosting mógł zablokować %s.",
+        "ExceptionWidgetNotFound": "Żądany gadżet nie istnieje.",
         "ExpandDataTableFooter": "Zmienić wizualizację lub skonfigurować raport",
         "Export": "Eksport",
         "ExportAsImage": "Eksport jako obraz",
@@ -162,6 +172,7 @@
         "FromReferrer": "z",
         "GeneralInformation": "Ogólne informacje",
         "GeneralSettings": "Konfiguracja podstawowa",
+        "GetStarted": "Zacznij",
         "GiveUsYourFeedback": "Zdaj relację!",
         "Goal": "Cel",
         "GoTo": "Idź do %s",
@@ -172,6 +183,7 @@
         "HoursMinutes": "%1$s godzin %2$s min",
         "Id": "Nr",
         "IfArchivingIsFastYouCanSetupCronRunMoreOften": "Ustawiając szybszą archiwizację w konfiguracji, możesz skonfigurować crontab by uruchamiał się częściej.",
+        "InfoFor": "Informacja dla %s",
         "Installed": "Zainstalowany",
         "InvalidDateRange": "Błędny zakres dat, wybierz ponownie",
         "InvalidResponse": "Otrzymane dane nie są prawidłowe.",
@@ -180,6 +192,7 @@
         "Language": "Język",
         "LastDays": "w czasie ostatnich %s dni (włączając dzisiejszy)",
         "LayoutDirection": "ltr",
+        "Live": "Na żywo",
         "Loading": "Ładowanie...",
         "LoadingData": "Ładowanie danych...",
         "LoadingPopover": "Ładowanie %s...",
@@ -210,6 +223,7 @@
         "Metadata": "Metadata",
         "MetricsToPlot": "Dane do porównania",
         "MinutesSeconds": "%1$s min %2$ss",
+        "Mobile": "Przenośny",
         "Monthly": "Miesięcznie",
         "MonthlyReport": "miesięcznie",
         "MonthlyReports": "Raporty miesięczne",
@@ -265,6 +279,8 @@
         "Others": "Pozostałe",
         "Outlink": "Linki zewnętrzne",
         "Outlinks": "Linki zewnętrzne",
+        "OverlayRowActionTooltip": "Zobacz analizowane dane bezpośrednio na swojej stronie (otwiera się w nowej karcie)",
+        "OverlayRowActionTooltipTitle": "Nakładka Otwarta Strona",
         "Overview": "Przegląd",
         "Pages": "Strony",
         "ParameterMustIntegerBetween": "Parametr %s musi być liczbą całkowitą między %s a %s.",
@@ -279,6 +295,7 @@
         "PoweredBy": "Wspierane przez",
         "Previous": "Wstecz",
         "PreviousDays": "poprzednie %s dni (bez dnia dzisiejszego)",
+        "PreviousDaysShort": "Poprzednie %s dni",
         "Price": "Cena",
         "ProductConversionRate": "Współczynnik konwersji produktu",
         "ProductRevenue": "Przychody ze sprzedaży produktów",
@@ -341,6 +358,7 @@
         "SmtpServerAddress": "Adres serwera SMTP",
         "SmtpUsername": "Nazwa użytkownika SMTP",
         "Source": "Źródło",
+        "StatisticsAreNotRecorded": "Piwik Visitor Tracking jest obecnie wyłączona! Ponownie włączenie śledzenia przez ustawienie record_statistics = 1 w pliku config \/ config.ini.php.",
         "Subtotal": "Razem",
         "Summary": "Podsumowanie",
         "Table": "Tabela",
@@ -351,6 +369,8 @@
         "Today": "dzisiaj",
         "Total": "Ogólnie",
         "TotalRevenue": "Przychody ogółem",
+        "TotalVisitsPageviewsRevenue": "(Ogółem: %s wizyt, %s wyświetleń stron, %s dochód)",
+        "TransitionsRowActionTooltipTitle": "Otwarte przejścia",
         "TranslatorEmail": "remigiusz.waszkiewicz@gmail.com, marcin@kowol.pl, maciej@brandnewmedia.pl, kontakt@awarchol.pl, onemac@onemac.pl, t.kornicki@lemonsky.pl",
         "TranslatorName": "<a href=\"http:\/\/eliteria.pl\">Remigiusz Waszkiewicz<\/a>, Marcin Kowol, Maciej Zawadziński, Artur Warchoł,AETERNUS, Tomasz Kornicki",
         "UniquePurchases": "Unikalnych zakupów",
