--- a/plugins/CoreAdminHome/lang/pl.json
+++ b/plugins/CoreAdminHome/lang/pl.json
@@ -26,8 +26,10 @@
         "JSTracking_CampaignKwdParam": "Parametr Słowa Kluczowego Kampanii",
         "JSTracking_CampaignNameParam": "Nazwa parametru Kampanii",
         "JSTracking_CodeNote": "Upewnij się, że ten kod jest na każdej podstronie Twojej strony przed tagiem %1$s.",
+        "JSTracking_CustomCampaignQueryParam": "Użyto niestandardowych nazw parametrów dla zapytanie do nazwy kampanii i hasła",
         "JSTracking_CustomCampaignQueryParamDesc": "Ważne: %1$sPiwik automatycznie wykryje parametry Google Analystics..%2$s",
         "JSTracking_DisableCookies": "Wyłącz wszystkie pliki cookie",
+        "JSTracking_DisableCookiesDesc": "Wyłącza wszystkie pliki cookie. Istniejące pliki cookie Piwik dla tej witryny zostaną usunięte w następnym widoku strony.",
         "JSTracking_EnableDoNotTrack": "Włącz wykrywanie DoNotTrack u klienta",
         "JSTracking_EnableDoNotTrack_AlreadyEnabled": "NOTKA: Serwerowa opcja DoNotTrack została aktywowana, ustawienie które edytujesz nie będzie brane pod uwagę.",
         "JSTracking_EnableDoNotTrackDesc": "Więc żądania śledzenia nie będą wysyłane jeżeli odwiedzający nie życzą sobie śledzenia.",
