--- a/plugins/CoreHome/lang/da.json
+++ b/plugins/CoreHome/lang/da.json
@@ -3,6 +3,7 @@
         "CategoryNoData": "Ingen data i kategorien. Prøv at 'Inkluder hele populationen'.",
         "CheckForUpdates": "Søg efter opdateringer",
         "CheckPiwikOut": "Tjek Piwik!",
+        "ClickRowToExpandOrContract": "Klik på rækken for at udvide eller sammentrække undertabelen.",
         "CloseWidgetDirections": "Luk modulet ved at klikke på 'X' ikonet øverst.",
         "DataForThisReportHasBeenPurged": "Data til rapporten er er mere end %s måneder gamle og er blevet ryddet op.",
         "DataTableExcludeAggregateRows": "Samlede rækker vises %s Skjul dem",
