--- a/plugins/CoreUpdater/lang/pl.json
+++ b/plugins/CoreUpdater/lang/pl.json
@@ -38,6 +38,7 @@
         "PiwikWillBeUpgradedFromVersionXToVersionY": "Baza danych statystyk Piwik zostanie zaktualizowana z wersji %1$s do nowej wersji %2$s.",
         "PluginDescription": "Mechanizm aktualizacji Piwik",
         "ReadyToGo": "Gotowy do dalszego działania?",
+        "TheFollowingDimensionsWillBeUpgradedX": "Następujące rozmiary zostaną zaaktualizowane: %s.",
         "TheFollowingPluginsWillBeUpgradedX": "Następujące wtyczki zostaną zaktualizowane: %s.",
         "ThereIsNewPluginVersionAvailableForUpdate": "Niektóre wtyczki zostały zaktualizowane na Marketplace:",
         "ThereIsNewVersionAvailableForUpdate": "Pojawiła się nowa wersja Piwik dostępna już dla aktualizacji",
