--- a/plugins/DBStats/lang/cs.json
+++ b/plugins/DBStats/lang/cs.json
@@ -7,12 +7,12 @@
         "IndexSize": "Velikost indexu",
         "LearnMore": "Abyste lépe zjistili, jak Piwik zpracovává data a jak jej nastavit pro weby se středním a velkým provozem, podívejte se do dokumentace %s.",
         "MainDescription": "Piwik ukládá všechny vaše data webové analýzy v MySQL databázi. Nyní tabulky Piwiku využívají %s.",
-        "MetricDataByYear": "Tabulky metrik za rok",
-        "MetricTables": "Tabulky metrik",
+        "MetricDataByYear": "Tabulky měření za rok",
+        "MetricTables": "Tabulky měření",
         "OtherTables": "Ostatní tabulky",
         "PluginDescription": "Tento zásuvný modul hlásí využití databáze MySQL tabulkami Piwiku",
         "ReportDataByYear": "Hlášení tabulek za rok",
-        "ReportTables": "Hlášení tabulek",
+        "ReportTables": "Tabulky hlášení",
         "RowCount": "Počet řádků",
         "Table": "Tabulka",
         "TotalSize": "Celková velikost",
