--- a/plugins/Dashboard/lang/pl.json
+++ b/plugins/Dashboard/lang/pl.json
@@ -3,23 +3,31 @@
         "AddAWidget": "Dodaj Widżet",
         "AddPreviewedWidget": "Dodaj obejrzane widżety do tablicy",
         "ChangeDashboardLayout": "Zmień wygląd tablicy analiz",
+        "CopyDashboardToUser": "Kopiuj panel do użytkownika",
         "CreateNewDashboard": "Utwórz nową tablicę analiz",
         "Dashboard": "Tablica statystyk",
+        "DashboardCopied": "Aktualny panel z powodzeniem można skopiować do wybranego użytkownika.",
+        "DashboardEmptyNotification": "Twój panel nie zatwiera, żadnych gadżetów. Rozpocznij pracę od dodawania różnych gazetów lub po prostu zresetuj panel, aby przywrócić domyślną sekcję gadżetów.",
         "DashboardName": "Nazwa tablicy analiz:",
+        "DefaultDashboard": "Domyślny panel - używa domyślnej sekcji gadżetów i kolumn układu.",
         "DeleteWidgetConfirm": "Czy jesteś pewien, że chcesz usunąć ten widżet z tej tablicy statystyk?",
         "EmptyDashboard": "Pusty panel - wskaż swóje ulubione gadżety",
         "LoadingWidget": "Ładowanie widżetu, proszę czekać...",
         "ManageDashboard": "Zarządzaj tablicami analiz",
         "Maximise": "Maksymalizuj",
+        "Minimise": "Minimalizacja",
         "NotUndo": "Nie będziesz mógł cofnąć tej operacji.",
         "PluginDescription": "Tablica analityki. Możesz skonfigurować swoją tablicę tak jak zaplanujesz: możesz dodać nowe widżety, zmienić porządek ich wyświetlania. Każdy z uprawnionych użytkowników może posiadać własną zindywidualizowaną tablicę statystyk.",
         "RemoveDashboard": "Usuń tablicę analiz",
+        "RemoveDashboardConfirm": "Czy jesteś pewny, że chcesz usunąć panel \"%s\"?",
         "RenameDashboard": "Zmień nawę tablicy analiz",
         "ResetDashboard": "Resetuj tablice analiz",
         "ResetDashboardConfirm": "Czy na pewno chcesz zresetować układ tablicy analiz?",
         "SelectDashboardLayout": "Proszę wybrać swój nowy wygląd tablicy analiz",
         "SelectWidget": "Wybierz widżet który chcesz dodać do tablicy statystyk",
         "SetAsDefaultWidgets": "Ustaw wybrane gadżety jako domyślne",
+        "SetAsDefaultWidgetsConfirm": "Czy na pewno chcesz, aby ustawić wybór i układ gadżetów na bieżącym panelu jako domyślny szablon panelu ?",
+        "SetAsDefaultWidgetsConfirmHelp": "Ta sekcja gadżetów i układ kolumn będzie używany, gdy jakikolwiek użytkownik stworzy nowy panel albo gdy funkcja \"%s\" jest w użyciu.",
         "WidgetNotFound": "Widżet nie został znaleziony",
         "WidgetPreview": "Podgląd widżetu",
         "WidgetsAndDashboard": "Widżety i Tablica analiz"
