--- a/plugins/Goals/lang/cs.json
+++ b/plugins/Goals/lang/cs.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Klíčová slova s nejvyšším počtem konverzí jsou:",
         "BestReferrers": "Odkazující stránky s nejvyšším počtem konverzí jsou:",
         "CaseSensitive": "shoda s velikostí písmen",
+        "ChooseGoal": "Vyberte cíl",
         "ClickOutlink": "Kliknout na odkaz na externí web",
         "ColumnAverageOrderRevenueDocumentation": "Průměrná hodnota objednávky (AOV) je celkový příjem ze všech objednávek dělený jejich počtem.",
         "ColumnAveragePriceDocumentation": "Průměrný příjem z tohoto %s.",
