--- a/plugins/Goals/lang/el.json
+++ b/plugins/Goals/lang/el.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Οι κορυφαίες λέξεις-κλειδιά μετατροπής είναι:",
         "BestReferrers": "Οι καλύτεροι αναφορείς ιστοσελίδων μετατροπής είναι:",
         "CaseSensitive": "Ταίριασμα πεζών-κεφαλαίων",
+        "ChooseGoal": "Επιλέξτε Στόχο",
         "ClickOutlink": "Το πάτημα Συνδέσμου προς εξωτερική ιστοσελίδα",
         "ColumnAverageOrderRevenueDocumentation": "Μέση Τιμή Παραγγελίας (ΜΤΠ) είναι η συνολική πρόσοδος από όλες τις Ηλεκτρονικές Παραγγελίες διαιρεμένη με τον αριθμό των παραγγελιών.",
         "ColumnAveragePriceDocumentation": "Η μέση πρόσοδος για αυτό το %s.",
