--- a/plugins/PrivacyManager/lang/cs.json
+++ b/plugins/PrivacyManager/lang/cs.json
@@ -38,12 +38,12 @@
         "EstimatedSpaceSaved": "Odhadované ušetřené místo",
         "GeolocationAnonymizeIpNote": "Poznámka: Geolokace bude mít přibližně stejnou přesnost, když je anonymizován 1 bit. Pokud jsou anonymizovány 2 bity a více, geolokace bude nepřesná.",
         "GetPurgeEstimate": "Získat odhad po vyprázdnění",
-        "KeepBasicMetrics": "Uchovat základní metriky (návštěvy, zobrazení stránek, odchody, cíle, atd.)",
+        "KeepBasicMetrics": "Uchovat základní měření (návštěvy, zobrazení stránek, odchody, cíle, atd.)",
         "KeepDataFor": "Uchovávat všechna data po",
         "KeepReportSegments": "Pro výše uchovávaná data také zachovat segmentovaná hlášení",
         "LastDelete": "Poslední mazání bylo v",
-        "LeastDaysInput": "Prosím uveďte počet dní větší než %s.",
-        "LeastMonthsInput": "Prosím uveďte počet měsíců větší než %s.",
+        "LeastDaysInput": "Prosím, uveďte počet dní větší než %s.",
+        "LeastMonthsInput": "Prosím, uveďte počet měsíců větší než %s.",
         "MenuPrivacySettings": "Ochrana soukromí",
         "NextDelete": "Následující plánované mazání za",
         "PluginDescription": "Přizpůsobí Piwik tak, aby splňoval zákony o soukromí dat.",
