--- a/plugins/UserSettings/lang/pl.json
+++ b/plugins/UserSettings/lang/pl.json
@@ -11,6 +11,7 @@
         "ColumnResolution": "Rozdzielczość",
         "ColumnTypeOfScreen": "Typ ekranu",
         "Configurations": "Konfiguracje",
+        "GamingConsole": "Konsola do grania",
         "Language_aa": "afar",
         "Language_ab": "abchaski",
         "Language_ae": "awestyjski",
@@ -196,6 +197,7 @@
         "Language_zh": "chiński",
         "Language_zu": "zulu",
         "LanguageCode": "Kod języka",
+        "MobileVsDesktop": "Mobilne kontra desktopowe",
         "OperatingSystemFamily": "Rodzina systemu operacyjnego",
         "OperatingSystems": "Systemy operacyjne",
         "PluginDescription": "Raporty rozmaitych konfiguracji użytkownika: przeglądarki, rodziny przeglądarek, systemów operacyjnych, wtyczek, rozdzielczości, ogólnej konfiguracji.",
@@ -205,6 +207,7 @@
         "WideScreen": "Ekran monitora",
         "WidgetBrowserFamilies": "Przeglądarki ze względu na rodzinę pochodzenia",
         "WidgetBrowsers": "Przeglądarki odwiedzających",
+        "WidgetBrowserVersion": "Wersja przeglądarki",
         "WidgetGlobalVisitors": "Ogólna konfiguracja odwiedzających",
         "WidgetOperatingSystems": "Systemy operacyjne",
         "WidgetPlugins": "Lista wtyczek",
