--- a/lang/de.json
+++ b/lang/de.json
@@ -67,6 +67,7 @@
         "ColumnNbUniqVisitors": "Eindeutige Besucher",
         "ColumnNbUniqVisitorsDocumentation": "Die Anzahl der eindeutigen Besucher auf der Webseite. Jeder Benutzer wird nur einmal gezählt, auch wenn er die Webseite mehrmals täglich besucht hat.",
         "ColumnNbUsers": "Benutzer",
+        "ColumnNbUsersDocumentation": "Die Anzahl auf Ihrer Webseite angemeldeter Nutzer. Die Zahl beinhaltet alle eindeutigen Besucher, welche eine Benutzer ID besitzen (durch die Tracking Code Funktion 'setUserID').",
         "ColumnNbVisits": "Besuche",
         "ColumnNbVisitsDocumentation": "Wenn ein Besucher zum ersten Mal die Webseite besucht oder seit dem letzen Seitenaufruf mehr als 30 Minuten vergangen sind, wird dies als neuer Besuch gewertet.",
         "ColumnPageBounceRateDocumentation": "Prozentsatz der Besuche, die auf dieser Seite starteten und die Webseite sofort wieder verlassen haben.",
