--- a/lang/el.json
+++ b/lang/el.json
@@ -66,6 +66,8 @@
         "ColumnNbActionsDocumentation": "Ο αριθμός των δραστηριοτήτων που έγιναν από τους επισκέπτες σας. Οι δραστηριότητες μπορεί να είναι προβολές σελίδων, λήψεις ή εξωτερικοί σύνδεσμοι.",
         "ColumnNbUniqVisitors": "Μοναδικοί επισκέπτες",
         "ColumnNbUniqVisitorsDocumentation": "Ο αριθμός των μη διπλών επισκεπτών που έρχονται στην ιστοσελίδα. Κάθε χρήστης καταγράφετε μόνο μια φορά, ακόμα και αν επισκέπτεται την ιστοσελίδα περισσότερες φορές τη μέρα.",
+        "ColumnNbUsers": "Χρήστες",
+        "ColumnNbUsersDocumentation": "Ο αριθμός χρηστών που έχουν κάνει είσοδο στον ιστοτόπο σας. Είναι ο αριθμός των μοναδικών ενεργών χρηστών που έχουν καθορισμένο αναγνωριστικό χρήστη (μέσω της συνάρτησης παρακολούθησης 'setUserId').",
         "ColumnNbVisits": "Επισκέψεις",
         "ColumnNbVisitsDocumentation": "Αν ένας επισκέπτης έρθει στην ιστοσελίδα για πρώτη φορά ή αν επισκέπτεται μια σελίδα για περισσότερο από 30 λεπτά μετά την τελευταία προβολή σελίδας, αυτό θα καταγράφετε ως νέα επίσκεψη.",
         "ColumnPageBounceRateDocumentation": "Το ποσοστό των επισκέψεων που ξεκίνησαν σε αυτή τη σελίδα και άφησαν την ιστοσελίδα αμέσως.",
@@ -271,6 +273,7 @@
         "NotValid": "Το %s δεν είναι έγκυρο",
         "NSeconds": "%s δευτερόλεπτα",
         "NumberOfVisits": "Αριθμός επισκέψεων",
+        "NUsers": "%s χρήστες",
         "NVisits": "%s επισκέψεις",
         "Ok": "Εντάξει",
         "OneAction": "1 δραστηριότητα",
@@ -405,6 +408,7 @@
         "Unknown": "Άγνωστο",
         "Upload": "Αποστολή",
         "UsePlusMinusIconsDocumentation": "Χρησιμοποιήστε τα εικονίδια + και - στα αριστερά για πλοήγηση.",
+        "UserId": "Αναγνωριστικό χρήστη",
         "Username": "Όνομα χρήστη",
         "UseSMTPServerForEmail": "Χρήση διακομιστή SMTP για ηλεκτρονική αλληλογραφία",
         "Value": "Τιμή",
