--- a/plugins/CorePluginsAdmin/lang/pl.json
+++ b/plugins/CorePluginsAdmin/lang/pl.json
@@ -50,12 +50,15 @@
         "NoZipFileSelected": "Proszę wybrać plik ZIP.",
         "NumDownloadsLatestVersion": "Ostatnia wersja: %s Pobrań",
         "NumUpdatesAvailable": "%s aktualizacji dostępnych",
+        "OrByUploadingAPlugin": "albo poprzez %swgrywanie wtyczki%s",
         "Origin": "Pochodzenie",
         "OriginCore": "Jądro",
+        "OriginThirdParty": "osoba trzecia",
         "PluginDescription": "Interfejs zarządzania wtyczkami.",
         "PluginHomepage": "Wtyczka strony głównej",
         "PluginKeywords": "Słowa kluczowe",
         "PluginNotCompatibleWith": "%1$s jest niekompatybilny z %2$s.",
+        "PluginNotWorkingAlternative": "Przy użyciu tej wtyczki, może znajdziesz nowszą wersję w Marketplace. Jeśli nie, możesz ją odinstalować.",
         "PluginRequirement": "%1$s wymaga %2$s.",
         "PluginsManagement": "Zarządzanie wtyczkami",
         "PluginUpdateAvailable": "Używasz wersji %s, nowa wersja %s jest dostępna.",
@@ -72,6 +75,7 @@
         "StepReplaceExistingPlugin": "Zastępowanie istniejącego pluginu",
         "StepReplaceExistingTheme": "Zastępowania obecnego motywu",
         "StepThemeSuccessfullyInstalled": "Pomyślnie zainstalowano szablon %1$s %2$s.",
+        "StepThemeSuccessfullyUpdated": "Motyw został zaaktualizowany %1$s %2$s.",
         "StepUnzippingPlugin": "Rozpakowywanie pluginu",
         "StepUnzippingTheme": "Rozpakowuję szablon",
         "SuccessfullyActicated": "Pomyślnie aktywowano <strong>%s<\/strong>.",
@@ -81,7 +85,9 @@
         "TeaserExtendPiwikByUpload": "Rozbuduj Piwik poporzez wgranie plików ZIP",
         "Theme": "Szablon",
         "Themes": "Szablony",
+        "ThemesDescription": "Skórki mogą zmienić wygląd interfejsu użytkownika Piwik , i zapewniają zupełnie nowe wrażenia wizualne w raportach Analytic",
         "ThemesManagement": "Zarządzaj szablonami",
+        "UninstallConfirm": "Chcesz odinstalować wstyczkę %s. Wtyczka zostanie całokowicie i trwale usunięta z twojej platformy. Czy jesteś pewny, że chcesz to zrobić?",
         "Updated": "Zaktualizowano",
         "UpdatingPlugin": "Aktualizacja %s",
         "UploadZipFile": "Wyślij plik ZIP",
