--- a/plugins/Feedback/lang/pl.json
+++ b/plugins/Feedback/lang/pl.json
@@ -2,15 +2,19 @@
     "Feedback": {
         "ContactThePiwikTeam": "Kontakt z ekipą Piwik!",
         "DoYouHaveBugReportOrFeatureRequest": "Czy odkryłeś błąd o którym chcesz poinformować, lub masz pomysł na nową funkcjonalność?",
+        "GetInTouch": "Dziękujemy za uwagi i zawsze czytamy wszystkie wiadomości. Może chcesz podzielić się możliwościami biznesowymi, zatrudnić konsultanta Piwik, opowiedzieć nam historię sukcesu lub po prostu się przywitać!",
         "IWantTo": "Pragnę:",
         "LearnWaysToParticipate": "Poznaj wszystkie sposoby %s uczestnictwa%s",
         "ManuallySendEmailTo": "Prosimy ręcznie wysłać swoją wiadomość",
         "PluginDescription": "Wyślij swoje opinie do zespołu Piwik. Podziel się swoimi pomysłami i sugestiami z nami!",
         "PrivacyClaim": "Piwik respektuje twoją %1$sprywatność%2$s i oddaje ci pełną kontrolę nad twoimi danymi.",
+        "RateFeatureLeaveMessageDislike": "Przykro nam słyszeć, że Tobie się nie podoba! Proszę pozwól nam wiedzieć, jak możemy to poprawić.",
+        "RateFeatureSendFeedbackInformation": "Twoja platforma Piwik wyśle nam (Ekipa Piwik) wiadomość email (zawierającą twój adres email), dzięki temu będziemy mogli mieć z toba kontakt jeśli miałbyś jakieś pytania.",
         "RateFeatureThankYouTitle": "Dziękujemy za ocenę '%s'!",
         "SendFeedback": "Wyślij opinię",
         "SpecialRequest": "Czy masz wyjątkowe życzenia, które chcesz przekazać dla ekipy programistów z Piwik?",
         "ThankYou": "Dziękujemy za pomoc, która pozwala uczynić statystyki Piwik jeszcze lepszymi!",
+        "TopLinkTooltip": "Powiedz nam co myslisz albo poproś o profesjonalne wsparcie.",
         "VisitTheForums": "Odwiedź %s forum%s",
         "WantToThankConsiderDonating": "Uważasz, że Piwik jest świetny i chcesz nam podziękować?"
     }
