--- a/plugins/Goals/lang/da.json
+++ b/plugins/Goals/lang/da.json
@@ -10,6 +10,7 @@
         "BestKeywords": "Top konverteringssøgeord er:",
         "BestReferrers": "Bedste konverteringshjemmeside henvisning er:",
         "CaseSensitive": "Forskel på små og store bogstaver",
+        "ChooseGoal": "Vælg mål",
         "ClickOutlink": "Klik på et link til en ekstern hjemmeside",
         "ColumnAverageOrderRevenueDocumentation": "Gennemsnitlig ordreværdi (GOV) er den samlede indtjening fra alle e-handel ordrer divideret med antallet af ordrer.",
         "ColumnAveragePriceDocumentation": "Gennemsnitlig indtjening for denne %s.",
