--- a/plugins/Overlay/lang/pl.json
+++ b/plugins/Overlay/lang/pl.json
@@ -4,6 +4,7 @@
         "Domain": "Domena",
         "Link": "Link",
         "Location": "Lokalizacja",
-        "OneClick": "1 kliknięcie"
+        "OneClick": "1 kliknięcie",
+        "RedirectUrlErrorUser": "Zwrócić się do administratora, aby dodać domenę jako dodatkowy URL."
     }
 }
