--- a/plugins/SegmentEditor/lang/da.json
+++ b/plugins/SegmentEditor/lang/da.json
@@ -1,6 +1,7 @@
 {
     "SegmentEditor": {
         "AddANDorORCondition": "Tilføj %s betingelse",
+        "AddingSegmentForAllWebsitesDisabled": "Tilføjelse af segmenter for alle websteder er blevet deaktiveret.",
         "AddNewSegment": "Tilføj nyt segment",
         "AreYouSureDeleteSegment": "Er du sikker på, at du vil slette dette segment?",
         "AutoArchivePreProcessed": "Segmenterede rapporter behandles på forhånd (er hurtigere, kræver archive.php cron)",
