--- a/plugins/Transitions/lang/pl.json
+++ b/plugins/Transitions/lang/pl.json
@@ -1,6 +1,11 @@
 {
     "Transitions": {
         "ExitsInline": "%s wyjść",
-        "FromWebsites": "Ze stron"
+        "FromPreviousSiteSearches": "Z wyszukiwarki wewnętrznej",
+        "FromSearchEngines": "Z wyszukiwarek",
+        "FromWebsites": "Ze stron",
+        "IncomingTraffic": "Ruch przychodzący",
+        "OutgoingTraffic": "Ruch wychodzący",
+        "ToFollowingSiteSearchesInline": "%s wewnętrzne wyszukiwania"
     }
 }
