language update  refs #3430

--- a/lang/tr.json
+++ b/lang/tr.json
@@ -319,7 +319,7 @@
         "Total": "Toplam",
         "TotalRevenue": "Toplam Kazanç",
         "TranslatorEmail": "halfdan@xnorfz.de, dev@yazici.info, hello@emresaracoglu.com",
-        "TranslatorName": "Fabian Becker, Emre Yazici, Emre Saraçoğlu, <a href=\"http:\/\/www.radyofm.com\" target=\"_blank\" title=\"Uğur Eskici\">Uğur Eskici<\/a>",
+        "TranslatorName": "Fabian Becker, Emre Yazici, Emre Saraçoğlu",
         "UniquePurchases": "Tekil Satın Alımlar",
         "Unknown": "Bilinmeyen",
         "Upload": "Yükle",
