initial work for alternative mysql engine support (InnoDB, TokuDB, XtraDB)

--- a/plugins/Installation/lang/en.json
+++ b/plugins/Installation/lang/en.json
@@ -15,6 +15,7 @@
         "DatabaseSetupLogin": "Login",
         "DatabaseSetupServer": "Database Server",
         "DatabaseSetupTablePrefix": "Table Prefix",
+        "DatabaseSetupDatabaseEngine": "Database Engine",
         "Email": "email",
         "Extension": "extension",
         "Filesystem": "Filesystem",
