--- a/plugins/CoreUpdater/lang/es.json
+++ b/plugins/CoreUpdater/lang/es.json
@@ -38,7 +38,7 @@
         "PiwikUpdatedSuccessfully": "¡Piwik actualizado con éxito!",
         "PiwikWillBeUpgradedFromVersionXToVersionY": "La base de datos de Piwik será actualizada desde la versión %1$s a la nueva versión %2$s.",
         "PluginDescription": "mecanismo de actualización de Piwik",
-        "ReadyToGo": "Listo?",
+        "ReadyToGo": "¿Listo?",
         "TheFollowingPluginsWillBeUpgradedX": "Los siguientes plugins serán actualizados: %s.",
         "ThereIsNewPluginVersionAvailableForUpdate": "Algunos plugins que utilizas han sido actualizados en el Marketplace:",
         "ThereIsNewVersionAvailableForUpdate": "Hay una nueva versión de Piwik disponible para actualizar",
