refs #3962 - implemented new detection of browser engines. Merged old reports from UserSettings plugin to DevicesDetection plugin. Added segment option for browser engines. Added update script to move old archives and to update old visits with engine data

--- a/plugins/DevicesDetection/lang/en.json
+++ b/plugins/DevicesDetection/lang/en.json
@@ -1,6 +1,8 @@
 {
     "DevicesDetection": {
         "BrowserVersions": "Browser versions",
+        "BrowserEngine": "Browser engine",
+        "BrowserEngines": "Browser engines",
         "Camera": "Camera",
         "CarBrowser": "Car browser",
         "Console": "Console",
